--- a/Source/Miruken.Castle/Miruken.Castle.csproj
+++ b/Source/Miruken.Castle/Miruken.Castle.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
+    <PropertyGroup>
       <TargetFrameworks>net48;net461</TargetFrameworks>
       <LangVersion>latest</LangVersion>
       <Authors>cneuwirt,provenstyle</Authors>
@@ -11,20 +11,20 @@
       <PackageProjectUrl>https://github.com/Miruken-DotNet/Miruken</PackageProjectUrl>
       <PackageIconUrl>https://avatars0.githubusercontent.com/u/20844317</PackageIconUrl>
       <PackageTags>Miruken Castle</PackageTags>
-  </PropertyGroup>
+    </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net48|AnyCPU'">
-    <OutputPath>bin\</OutputPath>
-  </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+        <OutputPath>bin\</OutputPath>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Castle.Core" Version="4.3.1" />
-    <PackageReference Include="Castle.Windsor" Version="4.1.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Castle.Core" Version="4.3.1" />
+        <PackageReference Include="Castle.Windsor" Version="4.1.0" />
+        <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Miruken\Miruken.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\Miruken\Miruken.csproj" />
+    </ItemGroup>
 
 </Project>
