--- a/Source/Miruken.Http/Miruken.Http.csproj
+++ b/Source/Miruken.Http/Miruken.Http.csproj
@@ -2,6 +2,15 @@
 
     <PropertyGroup>
       <TargetFrameworks>netstandard2.0;net48;net461</TargetFrameworks>
+      <Authors>cneuwirt</Authors>
+      <Company>Miruken</Company>
+      <Description>Miruken support for HTTP clients</Description>
+      <Copyright>Copyright 2019</Copyright>
+      <PackageLicenseUrl>https://github.com/Miruken-DotNet/Miruken/blob/master/LICENSE</PackageLicenseUrl>
+      <PackageProjectUrl>https://github.com/Miruken-DotNet/Miruken</PackageProjectUrl>
+      <PackageIconUrl>https://avatars0.githubusercontent.com/u/20844317</PackageIconUrl>
+      <PackageTags>Miruken HTTP</PackageTags>
+      <PackageReleaseNotes>Summary of changes made in this release of the package.</PackageReleaseNotes>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -30,12 +39,12 @@
       <PackageReference Include="System.Net.Http" Version="4.3.4" />
     </ItemGroup>
 
-    <ItemGroup  Condition="$(DefineConstants.Contains('NETSTANDARD'))">
+    <ItemGroup Condition="$(DefineConstants.Contains('NETSTANDARD'))">
         <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="2.2.0" />
     </ItemGroup>
 
-    <ItemGroup  Condition="$(DefineConstants.Contains('NETFULL'))">
+    <ItemGroup Condition="$(DefineConstants.Contains('NETFULL'))">
         <Reference Include="System.Data.Entity" />
     </ItemGroup>
 
