--- a/Test/Miruken.Tests/Miruken.Tests.csproj
+++ b/Test/Miruken.Tests/Miruken.Tests.csproj
@@ -31,6 +31,10 @@
         <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
     </ItemGroup>
 
+    <ItemGroup Condition="$(DefineConstants.Contains('NETSTANDARD'))">
+        <PackageReference Include="NLog.Extensions.Logging" Version="1.6.1" />
+    </ItemGroup>
+
     <ItemGroup>
         <ProjectReference Include="..\..\Source\Miruken\Miruken.csproj" />
     </ItemGroup>
