All configuration should build to bin

--- a/Source/Miruken.Castle/Miruken.Castle.csproj
+++ b/Source/Miruken.Castle/Miruken.Castle.csproj
@@ -17,6 +17,10 @@
         <OutputPath>bin\</OutputPath>
     </PropertyGroup>
 
+    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net48|AnyCPU'">
+      <OutputPath>bin\</OutputPath>
+    </PropertyGroup>
+
     <ItemGroup>
         <PackageReference Include="Castle.Core" Version="4.3.1" />
         <PackageReference Include="Castle.Windsor" Version="4.1.0" />
