--- a/Source/Miruken.Http/Miruken.Http.csproj
+++ b/Source/Miruken.Http/Miruken.Http.csproj
@@ -32,6 +32,9 @@
     <PropertyGroup Condition="'$(TargetFramework)' == 'net48'">
         <DefineConstants>NETFULL</DefineConstants>
     </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netstandard2.0|AnyCPU'">
+      <OutputPath>bin\</OutputPath>
+    </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
