Always build to bin and use the latest language version

--- a/Source/Miruken.Validate/Miruken.Validate.csproj
+++ b/Source/Miruken.Validate/Miruken.Validate.csproj
@@ -14,9 +14,7 @@
         <PackageIconUrl>https://avatars0.githubusercontent.com/u/20844317</PackageIconUrl>
         <PackageTags>Miruken Validate DataAnnotations FluentValidation</PackageTags>
         <PackageReleaseNotes>Summary of changes made in this release of the package.</PackageReleaseNotes>
-    </PropertyGroup>
-
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+        <LangVersion>latest</LangVersion>
         <OutputPath>bin\</OutputPath>
     </PropertyGroup>
 
@@ -29,9 +27,6 @@
     </PropertyGroup>
     <PropertyGroup Condition="'$(TargetFramework)' == 'net48'">
         <DefineConstants>NETFULL</DefineConstants>
-    </PropertyGroup>
-    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netstandard2.0|AnyCPU'">
-      <OutputPath>bin\</OutputPath>
     </PropertyGroup>
 
     <ItemGroup>
