--- a/Source/Miruken.Castle/Miruken.Castle.csproj
+++ b/Source/Miruken.Castle/Miruken.Castle.csproj
@@ -11,13 +11,7 @@
       <PackageProjectUrl>https://github.com/Miruken-DotNet/Miruken</PackageProjectUrl>
       <PackageIconUrl>https://avatars0.githubusercontent.com/u/20844317</PackageIconUrl>
       <PackageTags>Miruken Castle</PackageTags>
-    </PropertyGroup>
-
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-        <OutputPath>bin\</OutputPath>
-    </PropertyGroup>
-
-    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net48|AnyCPU'">
+      <LangVersion>latest</LangVersion>
       <OutputPath>bin\</OutputPath>
     </PropertyGroup>
 
