--- a/Source/Miruken.Validate.Castle/Miruken.Validate.Castle.csproj
+++ b/Source/Miruken.Validate.Castle/Miruken.Validate.Castle.csproj
@@ -11,14 +11,8 @@
         <PackageProjectUrl>https://github.com/Miruken-DotNet/Miruken</PackageProjectUrl>
         <PackageIconUrl>https://avatars0.githubusercontent.com/u/20844317</PackageIconUrl>
         <PackageTags>Miruken Castle Validation</PackageTags>
-    </PropertyGroup>
-
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+        <LangVersion>latest</LangVersion>
         <OutputPath>bin\</OutputPath>
-    </PropertyGroup>
-
-    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net48|AnyCPU'">
-      <OutputPath>bin\</OutputPath>
     </PropertyGroup>
 
     <ItemGroup>
