--- a/Source/Miruken/Miruken.csproj
+++ b/Source/Miruken/Miruken.csproj
@@ -18,6 +18,7 @@
         <PackageTags>Miruken</PackageTags>
         <LangVersion>latest</LangVersion>
         <OutputPath>bin\</OutputPath>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
     </PropertyGroup>
 
     <!-- compilation flags -->
@@ -33,6 +34,7 @@
 
     <ItemGroup>
         <PackageReference Include="FastExpressionCompiler" Version="2.0.0" />
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-19554-01" PrivateAssets="All"/>
     </ItemGroup>
 
     <ItemGroup Condition="$(DefineConstants.Contains('NETSTANDARD'))">
