--- a/Source/Miruken.Http/Miruken.Http.csproj
+++ b/Source/Miruken.Http/Miruken.Http.csproj
@@ -13,6 +13,7 @@
       <PackageReleaseNotes>Summary of changes made in this release of the package.</PackageReleaseNotes>
       <LangVersion>latest</LangVersion>
       <OutputPath>bin\</OutputPath>
+      <PublishRepositoryUrl>true</PublishRepositoryUrl>
     </PropertyGroup>
 
     <!-- compilation flags -->
@@ -27,6 +28,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-19554-01" PrivateAssets="All" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     </ItemGroup>
 
