--- a/Source/Miruken.Secure/Miruken.Secure.csproj
+++ b/Source/Miruken.Secure/Miruken.Secure.csproj
@@ -14,6 +14,7 @@
     <PackageReleaseNotes>Summary of changes made in this release of the package.</PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
     <OutputPath>bin\</OutputPath>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
   </PropertyGroup>
 
     <!-- compilation flags -->
@@ -27,8 +28,12 @@
         <DefineConstants>NETFULL</DefineConstants>
     </PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Miruken\Miruken.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-19554-01" PrivateAssets="All" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\Miruken\Miruken.csproj" />
+    </ItemGroup>
 
 </Project>
