--- a/Source/Miruken.Validate.Castle/Miruken.Validate.Castle.csproj
+++ b/Source/Miruken.Validate.Castle/Miruken.Validate.Castle.csproj
@@ -13,12 +13,14 @@
         <PackageTags>Miruken Castle Validation</PackageTags>
         <LangVersion>latest</LangVersion>
         <OutputPath>bin\</OutputPath>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Castle.Core" Version="4.3.1" />
         <PackageReference Include="Castle.Windsor" Version="4.1.0" />
         <PackageReference Include="FluentValidation" Version="8.5.0" />
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-19554-01" PrivateAssets="All" />
     </ItemGroup>
 
     <ItemGroup>
