--- a/Source/Miruken.Validate/Miruken.Validate.csproj
+++ b/Source/Miruken.Validate/Miruken.Validate.csproj
@@ -16,6 +16,7 @@
         <PackageReleaseNotes>Summary of changes made in this release of the package.</PackageReleaseNotes>
         <LangVersion>latest</LangVersion>
         <OutputPath>bin\</OutputPath>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
     </PropertyGroup>
 
     <!-- compilation flags -->
@@ -30,11 +31,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-    <PackageReference Include="FluentValidation" Version="8.5.0" />
+        <PackageReference Include="FluentValidation" Version="8.5.0" />
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-19554-01" PrivateAssets="All" />
     </ItemGroup>
 
     <ItemGroup>
-    <ProjectReference Include="..\Miruken\Miruken.csproj" />
+        <ProjectReference Include="..\Miruken\Miruken.csproj" />
     </ItemGroup>
 
 </Project>
