Added core 3 target

--- a/Source/Miruken.Http/Miruken.Http.csproj
+++ b/Source/Miruken.Http/Miruken.Http.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-      <TargetFrameworks>netstandard2.0;net48;net461</TargetFrameworks>
+      <TargetFrameworks>netstandard2.1;netstandard2.0;net48;net461</TargetFrameworks>
       <Authors>cneuwirt</Authors>
       <Company>Miruken</Company>
       <Description>Miruken support for HTTP clients</Description>
@@ -22,11 +22,17 @@
 
     <!-- compilation flags -->
     <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-        <DefineConstants>NETSTANDARD</DefineConstants>
+      <DefineConstants>NETSTANDARD;NETSTANDARD2_0</DefineConstants>
     </PropertyGroup>
+
+    <PropertyGroup Condition="'$(TargetFramework)' == 'netcoreapp3.0'">
+      <DefineConstants>NETSTANDARD;NETSTANDARD2_1</DefineConstants>
+    </PropertyGroup>
+
     <PropertyGroup Condition="'$(TargetFramework)' == 'net461'">
         <DefineConstants>NETFULL</DefineConstants>
     </PropertyGroup>
+
     <PropertyGroup Condition="'$(TargetFramework)' == 'net48'">
         <DefineConstants>NETFULL</DefineConstants>
     </PropertyGroup>
@@ -39,8 +45,15 @@
     <ItemGroup Condition="$(DefineConstants.Contains('NETSTANDARD'))">
         <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
         <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
-        <PackageReference Include="Microsoft.Extensions.Http" Version="2.2.0" />
         <PackageReference Include="System.Net.Http" Version="4.3.4" />
+    </ItemGroup>
+
+    <ItemGroup Condition="$(DefineConstants.Contains('NETSTANDARD2_0'))">
+      <PackageReference Include="Microsoft.Extensions.Http" Version="2.2.0" />
+    </ItemGroup>
+
+    <ItemGroup Condition="$(DefineConstants.Contains('NETSTANDARD2_1'))">
+      <PackageReference Include="Microsoft.Extensions.Http" Version="3.0.1" />
     </ItemGroup>
 
     <ItemGroup Condition="$(DefineConstants.Contains('NETFULL'))">
