--- a/Source/Miruken.Http/Miruken.Http.csproj
+++ b/Source/Miruken.Http/Miruken.Http.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-      <TargetFrameworks>netstandard2.1;netstandard2.0;net48;net461</TargetFrameworks>
+      <TargetFrameworks>netstandard2.1;netstandard2.0</TargetFrameworks>
       <Authors>cneuwirt</Authors>
       <Company>Miruken</Company>
       <Description>Miruken support for HTTP clients</Description>
@@ -28,24 +28,13 @@
     <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
       <DefineConstants>NETSTANDARD;NETSTANDARD2_1</DefineConstants>
     </PropertyGroup>
-
-    <PropertyGroup Condition="'$(TargetFramework)' == 'net461'">
-        <DefineConstants>NETFULL</DefineConstants>
-    </PropertyGroup>
-
-    <PropertyGroup Condition="'$(TargetFramework)' == 'net48'">
-        <DefineConstants>NETFULL</DefineConstants>
-    </PropertyGroup>
-
+    
     <ItemGroup>
       <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-19554-01" PrivateAssets="All" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-    </ItemGroup>
-
-    <ItemGroup Condition="$(DefineConstants.Contains('NETSTANDARD'))">
-        <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
-        <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
-        <PackageReference Include="System.Net.Http" Version="4.3.4" />
+      <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
+      <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+      <PackageReference Include="System.Net.Http" Version="4.3.4" />
     </ItemGroup>
 
     <ItemGroup Condition="$(DefineConstants.Contains('NETSTANDARD2_0'))">
@@ -55,16 +44,7 @@
     <ItemGroup Condition="$(DefineConstants.Contains('NETSTANDARD2_1'))">
       <PackageReference Include="Microsoft.Extensions.Http" Version="3.0.1" />
     </ItemGroup>
-
-    <ItemGroup Condition="$(DefineConstants.Contains('NETFULL'))">
-        <Reference Include="System.Data.Entity" />
-    </ItemGroup>
-
-    <ItemGroup Condition="$(DefineConstants.Contains('NETFULL'))">
-        <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.6" />
-        <PackageReference Include="System.Net.Http" Version="4.0.0" />
-    </ItemGroup>
-
+    
     <ItemGroup>
       <ProjectReference Include="..\Miruken.Validate\Miruken.Validate.csproj" />
       <ProjectReference Include="..\Miruken\Miruken.csproj" />
