--- a/Test/Miruken.Http.Tests/Miruken.Http.Tests.csproj
+++ b/Test/Miruken.Http.Tests/Miruken.Http.Tests.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-      <TargetFrameworks>netcoreapp3.1;netcoreapp2.2;net48;net461</TargetFrameworks>
-
+      <TargetFrameworks>netcoreapp3.1;netcoreapp2.2</TargetFrameworks>
       <IsPackable>false</IsPackable>
     </PropertyGroup>
 
@@ -22,22 +21,11 @@
     <PropertyGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
       <DefineConstants>NETSTANDARD;NETSTANDARD2_1</DefineConstants>
     </PropertyGroup>
-
-    <PropertyGroup Condition=" '$(TargetFramework)' == 'net461'">
-        <DefineConstants>NETFULL</DefineConstants>
-    </PropertyGroup>
-
-    <PropertyGroup Condition=" '$(TargetFramework)' == 'net48'">
-        <DefineConstants>NETFULL</DefineConstants>
-    </PropertyGroup>
-
+    
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
         <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
         <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
-    </ItemGroup>
-
-    <ItemGroup  Condition="$(DefineConstants.Contains('NETSTANDARD'))">
         <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="2.2.0" />
@@ -50,7 +38,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel.Core" Version="2.2.0" />
     </ItemGroup>
 
-    <ItemGroup  Condition="$(DefineConstants.Contains('NETSTANDARD2_0'))">
+    <ItemGroup Condition="$(DefineConstants.Contains('NETSTANDARD2_0'))">
       <PackageReference Include="Microsoft.Extensions.Http" Version="2.2.0" />
       <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.2.0" />
       <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
@@ -63,7 +51,7 @@
       <PackageReference Include="Microsoft.Extensions.Logging.EventSource" Version="2.2.0" />
     </ItemGroup>
 
-    <ItemGroup  Condition="$(DefineConstants.Contains('NETSTANDARD2_1'))">
+    <ItemGroup Condition="$(DefineConstants.Contains('NETSTANDARD2_1'))">
       <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.0" />
       <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="3.1.0" />
@@ -75,31 +63,11 @@
       <PackageReference Include="Microsoft.Extensions.Logging.EventSource" Version="3.1.0" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0" />
     </ItemGroup>
-
-    <ItemGroup Condition="$(DefineConstants.Contains('NETFULL'))">
-        <Reference Include="System.Net" />
-    </ItemGroup>
-
-    <ItemGroup Condition="$(DefineConstants.Contains('NETFULL'))">
-        <PackageReference Include="Castle.Core" Version="4.3.1" />
-        <PackageReference Include="Castle.Windsor" Version="4.1.0" />
-        <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.6" />
-        <PackageReference Include="Microsoft.AspNet.WebApi.Owin" Version="5.2.6" />
-        <PackageReference Include="Microsoft.Owin.Host.HttpListener" Version="4.0.0" />
-        <PackageReference Include="Microsoft.Owin.Hosting" Version="4.0.0" />
-        <PackageReference Include="Thinktecture.IdentityModel.Owin.BasicAuthentication" Version="1.0.1" />
-    </ItemGroup>
-
+    
     <ItemGroup>
       <ProjectReference Include="..\..\Source\Miruken.Http\Miruken.Http.csproj" />
       <ProjectReference Include="..\..\Source\Miruken.Validate\Miruken.Validate.csproj" />
       <ProjectReference Include="..\..\Source\Miruken\Miruken.csproj" />
-    </ItemGroup>
-
-    <ItemGroup Condition="$(DefineConstants.Contains('NETFULL'))">
-        <ProjectReference Include="..\..\Source\Miruken.Castle\Miruken.Castle.csproj" />
-        <ProjectReference Include="..\..\Source\Miruken\Miruken.csproj" />
-        <ProjectReference Include="..\..\Source\Miruken.Validate.Castle\Miruken.Validate.Castle.csproj" />
     </ItemGroup>
 
 </Project>
