--- a/Test/Miruken.Tests/Miruken.Tests.csproj
+++ b/Test/Miruken.Tests/Miruken.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>netcoreapp3.1;netcoreapp2.2;net48;net461</TargetFrameworks>
+        <TargetFrameworks>netcoreapp3.1;netcoreapp2.2</TargetFrameworks>
 
         <IsPackable>false</IsPackable>
     </PropertyGroup>
@@ -22,15 +22,7 @@
     <PropertyGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
       <DefineConstants>NETSTANDARD;NETSTANDARD2_1</DefineConstants>
     </PropertyGroup>
-
-    <PropertyGroup Condition=" '$(TargetFramework)' == 'net461'">
-        <DefineConstants>NETFULL</DefineConstants>
-    </PropertyGroup>
-
-    <PropertyGroup Condition=" '$(TargetFramework)' == 'net48'">
-        <DefineConstants>NETFULL</DefineConstants>
-    </PropertyGroup>
-
+    
     <ItemGroup>
       <None Remove="appsettings.json" />
     </ItemGroup>
@@ -45,9 +37,6 @@
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
         <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
         <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
-    </ItemGroup>
-
-    <ItemGroup Condition="$(DefineConstants.Contains('NETSTANDARD'))">
         <PackageReference Include="NLog.Extensions.Logging" Version="1.6.1" />
     </ItemGroup>
 
