--- a/Source/Miruken.Http/Miruken.Http.csproj
+++ b/Source/Miruken.Http/Miruken.Http.csproj
@@ -30,8 +30,8 @@
     </PropertyGroup>
     
     <ItemGroup>
-      <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-19554-01" PrivateAssets="All" />
-      <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+      <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.0-beta-20204-02" PrivateAssets="All" />
+      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
       <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
       <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
       <PackageReference Include="System.Net.Http" Version="4.3.4" />
@@ -42,7 +42,7 @@
     </ItemGroup>
 
     <ItemGroup Condition="$(DefineConstants.Contains('NETSTANDARD2_1'))">
-      <PackageReference Include="Microsoft.Extensions.Http" Version="3.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.3" />
     </ItemGroup>
     
     <ItemGroup>
