--- a/Source/Miruken/Miruken.csproj
+++ b/Source/Miruken/Miruken.csproj
@@ -36,19 +36,22 @@
     
     <ItemGroup>
         <PackageReference Include="FastExpressionCompiler" Version="2.0.0" />
-        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-19554-01" PrivateAssets="All" />
-        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
-        <PackageReference Include="Scrutor" Version="3.1.0" />
-        <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.0-beta-20204-02" PrivateAssets="All" />
+
+        <PackageReference Include="Scrutor" Version="3.2.1" />
+        <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     </ItemGroup>
 
     <ItemGroup Condition="$(DefineConstants.Contains('NETSTANDARD2_0'))">
       <PackageReference Include="System.Reflection.DispatchProxy" Version="4.6.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.2.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
+      <PackageReference Include="System.Reflection.DispatchProxy" Version="4.7.0" />
     </ItemGroup>
 
     <ItemGroup Condition="$(DefineConstants.Contains('NETSTANDARD2_1'))">
-      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.3" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.3" />
     </ItemGroup>
     
 </Project>
