--- a/Test/Miruken.Tests/Miruken.Tests.csproj
+++ b/Test/Miruken.Tests/Miruken.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>netcoreapp3.1;netcoreapp2.2</TargetFrameworks>
+        <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
 
         <IsPackable>false</IsPackable>
     </PropertyGroup>
@@ -34,7 +34,6 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.5" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
         <PackageReference Include="MSTest.TestAdapter" Version="2.1.2" />
         <PackageReference Include="MSTest.TestFramework" Version="2.1.2" />
@@ -44,11 +43,11 @@
     <ItemGroup Condition="$(DefineConstants.Contains('NETSTANDARD2_0'))">
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.1.1" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
-
     </ItemGroup>
 
     <ItemGroup Condition="$(DefineConstants.Contains('NETSTANDARD2_1'))">
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.5" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.5" />
     </ItemGroup>
 
     <ItemGroup>
