--- a/Source/Miruken.Validate/Miruken.Validate.csproj
+++ b/Source/Miruken.Validate/Miruken.Validate.csproj
@@ -29,8 +29,9 @@
     </PropertyGroup>
     
     <ItemGroup>
-        <PackageReference Include="FluentValidation" Version="8.6.2" />
+        <PackageReference Include="FluentValidation" Version="9.3.0" />
         <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.0-beta-20204-02" PrivateAssets="All" />
+        <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
     </ItemGroup>
 
     <ItemGroup>
