--- a/Source/Miruken/Miruken.csproj
+++ b/Source/Miruken/Miruken.csproj
@@ -36,6 +36,7 @@
     
     <ItemGroup>
         <PackageReference Include="FastExpressionCompiler" Version="2.0.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.5" />
         <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.0-beta-20204-02" PrivateAssets="All" />
         <PackageReference Include="Scrutor" Version="3.3.0" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
