--- a/Source/Miruken/Miruken.csproj
+++ b/Source/Miruken/Miruken.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>netstandard2.1;netstandard2.0</TargetFrameworks>
+        <TargetFramework>net5.0</TargetFramework>
         <LangVersion>latest</LangVersion>
         <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
         <PackageId>Miruken</PackageId>
@@ -25,32 +25,14 @@
         <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
     </PropertyGroup>
 
-    <!-- compilation flags -->
-    <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-      <DefineConstants>NETSTANDARD;NETSTANDARD2_0</DefineConstants>
-    </PropertyGroup>
-
-    <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
-      <DefineConstants>NETSTANDARD;NETSTANDARD2_1</DefineConstants>
-    </PropertyGroup>
-    
     <ItemGroup>
         <PackageReference Include="FastExpressionCompiler" Version="2.0.0" />
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.5" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
         <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.0-beta-20204-02" PrivateAssets="All" />
         <PackageReference Include="Scrutor" Version="3.3.0" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    </ItemGroup>
-
-    <ItemGroup Condition="$(DefineConstants.Contains('NETSTANDARD2_0'))">
-      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.2.0" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
-      <PackageReference Include="System.Reflection.DispatchProxy" Version="4.7.1" />
-    </ItemGroup>
-
-    <ItemGroup Condition="$(DefineConstants.Contains('NETSTANDARD2_1'))">
-      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.5" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.5" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
     </ItemGroup>
     
 </Project>
