--- a/Source/Miruken.Http/Miruken.Http.csproj
+++ b/Source/Miruken.Http/Miruken.Http.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-      <TargetFrameworks>netstandard2.1;netstandard2.0</TargetFrameworks>
+      <TargetFramework>net5.0</TargetFramework>
       <Authors>cneuwirt</Authors>
       <Company>Miruken</Company>
       <Description>Miruken support for HTTP clients</Description>
@@ -19,30 +19,14 @@
     <PropertyGroup Condition="'$(Configuration)'=='Debug'">
         <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
     </PropertyGroup>
-
-    <!-- compilation flags -->
-    <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-      <DefineConstants>NETSTANDARD;NETSTANDARD2_0</DefineConstants>
-    </PropertyGroup>
-
-    <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
-      <DefineConstants>NETSTANDARD;NETSTANDARD2_1</DefineConstants>
-    </PropertyGroup>
     
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
       <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.0-beta-20204-02" PrivateAssets="All" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
       <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
       <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
       <PackageReference Include="System.Net.Http" Version="4.3.4" />
-    </ItemGroup>
-
-    <ItemGroup Condition="$(DefineConstants.Contains('NETSTANDARD2_0'))">
-      <PackageReference Include="Microsoft.Extensions.Http" Version="2.2.0" />
-    </ItemGroup>
-
-    <ItemGroup Condition="$(DefineConstants.Contains('NETSTANDARD2_1'))">
-      <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.5" />
     </ItemGroup>
     
     <ItemGroup>
