--- a/Test/Miruken.Http.Tests/Miruken.Http.Tests.csproj
+++ b/Test/Miruken.Http.Tests/Miruken.Http.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-      <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
+      <TargetFramework>net5.0</TargetFramework>
       <IsPackable>false</IsPackable>
     </PropertyGroup>
 
@@ -11,15 +11,6 @@
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
         <LangVersion>latest</LangVersion>
-    </PropertyGroup>
-
-    <!-- compilation flags -->
-    <PropertyGroup Condition=" '$(TargetFramework)' == 'netcoreapp2.2'">
-        <DefineConstants>NETSTANDARD;NETSTANDARD2_0</DefineConstants>
-    </PropertyGroup>
-
-    <PropertyGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
-      <DefineConstants>NETSTANDARD;NETSTANDARD2_1</DefineConstants>
     </PropertyGroup>
     
     <ItemGroup>
@@ -37,31 +28,18 @@
         <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel.Core" Version="2.2.0" />
     </ItemGroup>
-
-    <ItemGroup Condition="$(DefineConstants.Contains('NETSTANDARD2_0'))">
-      <PackageReference Include="Microsoft.Extensions.Http" Version="2.2.0" />
-      <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.2.0" />
-      <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="2.2.0" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="2.2.0" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="2.2.0" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.2.0" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.2.0" />
-      <PackageReference Include="Microsoft.Extensions.Logging.EventSource" Version="2.2.0" />
-    </ItemGroup>
-
-    <ItemGroup Condition="$(DefineConstants.Contains('NETSTANDARD2_1'))">
-      <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.5" />
-      <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.5" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="3.1.5" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.5" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.5" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="3.1.5" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.5" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.5" />
-      <PackageReference Include="Microsoft.Extensions.Logging.EventSource" Version="3.1.5" />
-      <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.5" />
+    
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
+      <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="5.0.3" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="5.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="5.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="5.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="5.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.EventSource" Version="5.0.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.3" />
     </ItemGroup>
     
     <ItemGroup>
