--- a/Test/Miruken.Tests/Miruken.Tests.csproj
+++ b/Test/Miruken.Tests/Miruken.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
+        <TargetFramework>net5.0</TargetFramework>
 
         <IsPackable>false</IsPackable>
     </PropertyGroup>
@@ -12,15 +12,6 @@
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
         <LangVersion>latest</LangVersion>
-    </PropertyGroup>
-
-    <!-- compilation flags -->
-    <PropertyGroup Condition=" '$(TargetFramework)' == 'netcoreapp2.2'">
-      <DefineConstants>NETSTANDARD;NETSTANDARD2_0</DefineConstants>
-    </PropertyGroup>
-
-    <PropertyGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
-      <DefineConstants>NETSTANDARD;NETSTANDARD2_1</DefineConstants>
     </PropertyGroup>
     
     <ItemGroup>
@@ -37,17 +28,12 @@
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
         <PackageReference Include="MSTest.TestAdapter" Version="2.1.2" />
         <PackageReference Include="MSTest.TestFramework" Version="2.1.2" />
-        <PackageReference Include="NLog.Extensions.Logging" Version="1.6.5" />
+        <PackageReference Include="NLog.Extensions.Logging" Version="1.7.0" />
     </ItemGroup>
-
-    <ItemGroup Condition="$(DefineConstants.Contains('NETSTANDARD2_0'))">
-      <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.1.1" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
-    </ItemGroup>
-
-    <ItemGroup Condition="$(DefineConstants.Contains('NETSTANDARD2_1'))">
-      <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.5" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.5" />
+    
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
     </ItemGroup>
 
     <ItemGroup>
